public/js/pl0.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { program: peg$parseprogram },
        peg$startRuleFunction  = peg$parseprogram,

        peg$c0 = function(b) {
            b.name = {
            type: 'ID',
            value: "$main"
            };
            b.params = [];
            return b;
          },
        peg$c1 = function(cD, vD, fD, st) {
            let constants = cD? cD : [];
            let variables = vD? vD : [];
            return {
              type: 'BLOCK',
              constants: constants,
              variables: variables,
              functions: fD,
              main: st
            };
          },
        peg$c2 = function(id, n, rest) {
            let r = rest.map( ([_, id, __, nu]) => [id.value, nu.value] );
            return [[id.value, n.value]].concat(r)
        },
        peg$c3 = function(id, rest) {
            let r = rest.map( ([_, id]) => id.value );
            return [id.value].concat(r)
        },
        peg$c4 = function(id, p1, r, b) {
          let params = p1? [p1] : [];
          params = params.concat(r.map(([_, p]) => p));
          //delete b.type;
          return Object.assign({
            type: 'FUNCTION',
            name: id,
            params: params,
          }, b);
        },
        peg$c5 = function(s1, r) {
          //console.log(location()) /* atributos start y end */
          let t = [];
          if (s1)
            t.push(s1);
            return {
               type: 'COMPOUND', // Chrome supports destructuring
               children: t.concat(r.map( ([_, st]) => st ))
             };
          },
        peg$c6 = function(e, st, sf) {
              return {
                type: 'IFELSE',
                c:  e,
                st: st,
                sf: sf,
              };
          },
        peg$c7 = function(e, st) {
              return {
                type: 'IF',
                c:  e,
                st: st
              };
          },
        peg$c8 = function(a, st) {
              return {
                type: 'WHILE',
                c: a,
                st: st
              };
          },
        peg$c9 = function(a) {
              return {
                type: 'RETURN',
                children: a? [a] : [] };
          },
        peg$c10 = function(i, e) {
                return {
                  type: '=',
                  left: i,
                  right: e
                };
              },
        peg$c11 = function(i, s) {
                   return {
                     type: '=',
                     left: i,
                     right: s
                   }
               },
        peg$c12 = function(l, op, r) {
                return {
                  type: op,
                  left: l,
                  right: r
                }
            },
        peg$c13 = function(t, r) {
                return tree(t,r);
              },
        peg$c14 = function(f, r) {
                  return tree(f,r);
                },
        peg$c15 = function(f, a, r) {
                   let t = [];
                   if (a) t.push(a);
                   return {
                     type: 'CALL',
                     func: f,
                     arguments: t.concat(r.map(([_, exp]) => exp))
                   }
                 },
        peg$c16 = function(t) { return t; },
        peg$c17 = function(value) {
            return {
              type: 'STRING',
              value: value
            }
          },
        peg$c18 = /^[ \t\n\r]/,
        peg$c19 = { type: "class", value: "[ \\t\\n\\r]", description: "[ \\t\\n\\r]" },
        peg$c20 = "=",
        peg$c21 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c22 = function(op) { return op; },
        peg$c23 = "++",
        peg$c24 = { type: "literal", value: "++", description: "\"++\"" },
        peg$c25 = "--",
        peg$c26 = { type: "literal", value: "--", description: "\"--\"" },
        peg$c27 = function(op) {  return op; },
        peg$c28 = /^[+\-]/,
        peg$c29 = { type: "class", value: "[+-]", description: "[+-]" },
        peg$c30 = /^[*\/]/,
        peg$c31 = { type: "class", value: "[*/]", description: "[*/]" },
        peg$c32 = "(",
        peg$c33 = { type: "literal", value: "(", description: "\"(\"" },
        peg$c34 = ")",
        peg$c35 = { type: "literal", value: ")", description: "\")\"" },
        peg$c36 = "{",
        peg$c37 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c38 = "}",
        peg$c39 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c40 = ";",
        peg$c41 = { type: "literal", value: ";", description: "\";\"" },
        peg$c42 = ",",
        peg$c43 = { type: "literal", value: ",", description: "\",\"" },
        peg$c44 = "&&",
        peg$c45 = { type: "literal", value: "&&", description: "\"&&\"" },
        peg$c46 = "||",
        peg$c47 = { type: "literal", value: "||", description: "\"||\"" },
        peg$c48 = "\"",
        peg$c49 = { type: "literal", value: "\"", description: "\"\\\"\"" },
        peg$c50 = "==",
        peg$c51 = { type: "literal", value: "==", description: "\"==\"" },
        peg$c52 = "!=",
        peg$c53 = { type: "literal", value: "!=", description: "\"!=\"" },
        peg$c54 = "<=",
        peg$c55 = { type: "literal", value: "<=", description: "\"<=\"" },
        peg$c56 = ">=",
        peg$c57 = { type: "literal", value: ">=", description: "\">=\"" },
        peg$c58 = "<",
        peg$c59 = { type: "literal", value: "<", description: "\"<\"" },
        peg$c60 = ">",
        peg$c61 = { type: "literal", value: ">", description: "\">\"" },
        peg$c62 = function(op) {
                       return op;
                    },
        peg$c63 = "if",
        peg$c64 = { type: "literal", value: "if", description: "\"if\"" },
        peg$c65 = "then",
        peg$c66 = { type: "literal", value: "then", description: "\"then\"" },
        peg$c67 = "else",
        peg$c68 = { type: "literal", value: "else", description: "\"else\"" },
        peg$c69 = "for",
        peg$c70 = { type: "literal", value: "for", description: "\"for\"" },
        peg$c71 = "while",
        peg$c72 = { type: "literal", value: "while", description: "\"while\"" },
        peg$c73 = "do",
        peg$c74 = { type: "literal", value: "do", description: "\"do\"" },
        peg$c75 = "switch",
        peg$c76 = { type: "literal", value: "switch", description: "\"switch\"" },
        peg$c77 = "case",
        peg$c78 = { type: "literal", value: "case", description: "\"case\"" },
        peg$c79 = "return",
        peg$c80 = { type: "literal", value: "return", description: "\"return\"" },
        peg$c81 = "var",
        peg$c82 = { type: "literal", value: "var", description: "\"var\"" },
        peg$c83 = "const",
        peg$c84 = { type: "literal", value: "const", description: "\"const\"" },
        peg$c85 = "function",
        peg$c86 = { type: "literal", value: "function", description: "\"function\"" },
        peg$c87 = /^[a-zA-Z0-9_ ]/,
        peg$c88 = { type: "class", value: "[a-zA-Z0-9_ ]", description: "[a-zA-Z0-9_ ]" },
        peg$c89 = function(str) { return str.join(""); },
        peg$c90 = "\\",
        peg$c91 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c92 = /^[ a-zA-Z0-9]/,
        peg$c93 = { type: "class", value: "[ a-zA-Z0-9]", description: "[ a-zA-Z0-9]" },
        peg$c94 = function(str) { return type: 'COMENTARIO', value: str.join(""); },
        peg$c95 = /^[a-zA-Z_]/,
        peg$c96 = { type: "class", value: "[a-zA-Z_]", description: "[a-zA-Z_]" },
        peg$c97 = /^[a-zA-Z_0-9]/,
        peg$c98 = { type: "class", value: "[a-zA-Z_0-9]", description: "[a-zA-Z_0-9]" },
        peg$c99 = function(id) {
                      return { type: 'ID', value: id };
                    },
        peg$c100 = /^[0-9]/,
        peg$c101 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c102 = function(digits) {
                      return { type: 'NUM', value: parseInt(digits, 10) };
                    },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseprogram() {
      var s0, s1;

      s0 = peg$currPos;
      s1 = peg$parseblock();
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseblock() {
      var s0, s1, s2, s3, s4;

      s0 = [];
      s1 = peg$parseCOMMENTS();
      while (s1 !== peg$FAILED) {
        s0.push(s1);
        s1 = peg$parseCOMMENTS();
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseconstantDeclaration();
        if (s1 === peg$FAILED) {
          s1 = null;
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parsevarDeclaration();
          if (s2 === peg$FAILED) {
            s2 = null;
          }
          if (s2 !== peg$FAILED) {
            s3 = [];
            s4 = peg$parsefunctionDeclaration();
            while (s4 !== peg$FAILED) {
              s3.push(s4);
              s4 = peg$parsefunctionDeclaration();
            }
            if (s3 !== peg$FAILED) {
              s4 = peg$parsest();
              if (s4 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c1(s1, s2, s3, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      }

      return s0;
    }

    function peg$parseconstantDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      s1 = peg$parseCONST();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseASSIGN();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseNUMBER();
            if (s4 !== peg$FAILED) {
              s5 = [];
              s6 = peg$currPos;
              s7 = peg$parseCOMMA();
              if (s7 !== peg$FAILED) {
                s8 = peg$parseID();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseASSIGN();
                  if (s9 !== peg$FAILED) {
                    s10 = peg$parseNUMBER();
                    if (s10 !== peg$FAILED) {
                      s7 = [s7, s8, s9, s10];
                      s6 = s7;
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              } else {
                peg$currPos = s6;
                s6 = peg$FAILED;
              }
              while (s6 !== peg$FAILED) {
                s5.push(s6);
                s6 = peg$currPos;
                s7 = peg$parseCOMMA();
                if (s7 !== peg$FAILED) {
                  s8 = peg$parseID();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseASSIGN();
                    if (s9 !== peg$FAILED) {
                      s10 = peg$parseNUMBER();
                      if (s10 !== peg$FAILED) {
                        s7 = [s7, s8, s9, s10];
                        s6 = s7;
                      } else {
                        peg$currPos = s6;
                        s6 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s6;
                      s6 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s6;
                    s6 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s6;
                  s6 = peg$FAILED;
                }
              }
              if (s5 !== peg$FAILED) {
                s6 = peg$parseSC();
                if (s6 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c2(s2, s4, s5);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsevarDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseVAR();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseCOMMA();
          if (s5 !== peg$FAILED) {
            s6 = peg$parseID();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseCOMMA();
            if (s5 !== peg$FAILED) {
              s6 = peg$parseID();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseSC();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c3(s2, s3);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsefunctionDeclaration() {
      var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

      s0 = peg$currPos;
      s1 = peg$parseFUNCTION();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseID();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseLEFTPAR();
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            peg$silentFails++;
            s5 = peg$parseCOMMA();
            peg$silentFails--;
            if (s5 === peg$FAILED) {
              s4 = void 0;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseID();
              if (s5 === peg$FAILED) {
                s5 = null;
              }
              if (s5 !== peg$FAILED) {
                s6 = [];
                s7 = peg$currPos;
                s8 = peg$parseCOMMA();
                if (s8 !== peg$FAILED) {
                  s9 = peg$parseID();
                  if (s9 !== peg$FAILED) {
                    s8 = [s8, s9];
                    s7 = s8;
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s7;
                  s7 = peg$FAILED;
                }
                while (s7 !== peg$FAILED) {
                  s6.push(s7);
                  s7 = peg$currPos;
                  s8 = peg$parseCOMMA();
                  if (s8 !== peg$FAILED) {
                    s9 = peg$parseID();
                    if (s9 !== peg$FAILED) {
                      s8 = [s8, s9];
                      s7 = s8;
                    } else {
                      peg$currPos = s7;
                      s7 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s7;
                    s7 = peg$FAILED;
                  }
                }
                if (s6 !== peg$FAILED) {
                  s7 = peg$parseRIGHTPAR();
                  if (s7 !== peg$FAILED) {
                    s8 = peg$parseSC();
                    if (s8 !== peg$FAILED) {
                      s9 = peg$parseblock();
                      if (s9 !== peg$FAILED) {
                        s10 = peg$parseSC();
                        if (s10 !== peg$FAILED) {
                          peg$savedPos = s0;
                          s1 = peg$c4(s2, s5, s6, s9);
                          s0 = s1;
                        } else {
                          peg$currPos = s0;
                          s0 = peg$FAILED;
                        }
                      } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                      }
                    } else {
                      peg$currPos = s0;
                      s0 = peg$FAILED;
                    }
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parsest() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parseCL();
      if (s1 !== peg$FAILED) {
        s2 = peg$parsest();
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$currPos;
          s5 = peg$parseSC();
          if (s5 !== peg$FAILED) {
            s6 = peg$parsest();
            if (s6 !== peg$FAILED) {
              s5 = [s5, s6];
              s4 = s5;
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          } else {
            peg$currPos = s4;
            s4 = peg$FAILED;
          }
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$currPos;
            s5 = peg$parseSC();
            if (s5 !== peg$FAILED) {
              s6 = peg$parsest();
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
          }
          if (s3 !== peg$FAILED) {
            s4 = [];
            s5 = peg$parseSC();
            while (s5 !== peg$FAILED) {
              s4.push(s5);
              s5 = peg$parseSC();
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseCR();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c5(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseIF();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseassign();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseTHEN();
            if (s3 !== peg$FAILED) {
              s4 = peg$parsest();
              if (s4 !== peg$FAILED) {
                s5 = peg$parseELSE();
                if (s5 !== peg$FAILED) {
                  s6 = peg$parsest();
                  if (s6 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c6(s2, s4, s6);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseIF();
          if (s1 !== peg$FAILED) {
            s2 = peg$parseassign();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseTHEN();
              if (s3 !== peg$FAILED) {
                s4 = peg$parsest();
                if (s4 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c7(s2, s4);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseWHILE();
            if (s1 !== peg$FAILED) {
              s2 = peg$parseassign();
              if (s2 !== peg$FAILED) {
                s3 = peg$parseDO();
                if (s3 !== peg$FAILED) {
                  s4 = peg$parsest();
                  if (s4 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c8(s2, s4);
                    s0 = s1;
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              s1 = peg$parseRETURN();
              if (s1 !== peg$FAILED) {
                s2 = peg$parseassign();
                if (s2 === peg$FAILED) {
                  s2 = null;
                }
                if (s2 !== peg$FAILED) {
                  peg$savedPos = s0;
                  s1 = peg$c9(s2);
                  s0 = s1;
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
              if (s0 === peg$FAILED) {
                s0 = peg$parseassign();
              }
            }
          }
        }
      }

      return s0;
    }

    function peg$parseassign() {
      var s0, s1, s2, s3;
